# thurkube

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  cog.toml  deny.toml  renovate.json
.claude/commands/: refactor.md  ship.md  sync.md
.claude/skills/publish/: SKILL.md
.config/: nextest.toml
.github/workflows/: cd.yml  ci.yml  pages.yml  release.yml
charts/thurkube/: Chart.yaml  values.yaml
charts/thurkube/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
charts/thurkube/templates/crds/: agentauth.yaml  agentjob.yaml  agentrole.yaml  agentruntime.yaml  agentskill.yaml  clusteraccess.yaml  mcpserver.yaml  repository.yaml
scripts/: setup-repo.sh
src/: health.rs  lib.rs  main.rs
src/controller/: agentjob.rs  build.rs  context.rs  finalizer.rs  mod.rs  resolve.rs  status.rs
src/crd/: agent_auth.rs  agent_job.rs  agent_role.rs  agent_runtime.rs  agent_skill.rs  cluster_access.rs  mcp_server.rs  mod.rs  repository.rs
tests/: architecture_rules.rs  crd_schema.rs  e2e.rs  version_format.rs
website/: index.html
website/css/: base.css  components.css  docs.css  landing.css  layout.css  variables.css
website/docs/: architecture.html  crd-reference.html  index.html  quickstart.html
website/js/: main.js
