[package]
name = "thurkube"
version = "0.0.0-dev"
edition = "2021"
authors = ["LeTuR <magicletur@users.noreply.github.com>"]
description = "Kubernetes controller for orchestrating Claude Code agents"
repository = "https://github.com/Thurbeen/thurkube"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
# Kubernetes
kube = { version = "1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.25", features = ["v1_32"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Schema generation (for CRD)
schemars = "0.8"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[package.metadata.dev-tools]
prek = "pre-commit hook manager"
cocogitto = "conventional commits & semver"
cargo-nextest = "test runner"
cargo-deny = "dependency audit"
