[package]
name = "thurkube"
version = "0.0.0-dev"
edition = "2021"
authors = ["LeTuR <magicletur@users.noreply.github.com>"]
description = "Kubernetes controller for orchestrating Claude Code agents"
repository = "https://github.com/Thurbeen/thurkube"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
# Kubernetes
kube = { version = "1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.25", features = ["v1_32", "schemars"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Schema generation (for CRD)
schemars = "0.8"

# Hashing (configHash for drift detection)
sha2 = "0.10"

# Timestamps (RFC3339 for status conditions)
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Health / readiness HTTP server
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Cancellation token for graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[package.metadata.dev-tools]
prek = "pre-commit hook manager"
cocogitto = "conventional commits & semver"
cargo-nextest = "test runner"
cargo-deny = "dependency audit"
